# llm-api-demo

./: .gitignore  README.md  build.gradle.kts  demo_help.sh  orchestration_report.md  pyproject.toml  settings.gradle.kts  test_hello.txt
.github/workflows/: pr_review.yml
.ralph/: ralph-history.json  ralph-loop.state.json
data/crm/: tickets.json  users.json
data/docs/: faq.md
scripts/: demo_daily_digest.sh  demo_file_assistant.sh  demo_pr_review.sh  pr_review.py
searxng_config/: limiter.toml  settings.yml
src/llm_cli/: __init__.py  __main__.py  agent.py  api.py  benchmark.py  chat.py  config.py  daily_digest.py  dev_assistant.py  display.py  file_assistant.py  invariants.py  local_optimize.py  mcp_client.py  mcp_server.py  mcp_server_data.py  mcp_server_files.py  mcp_server_support.py  mcp_server_tools.py  memory.py  models.py  scheduler_daemon.py  strategy.py  support_assistant.py  task_fsm.py
src/llm_cli/rag/: __init__.py  chunker.py  compare.py  demo.py  embedder.py  eval.py  indexer.py  loader.py  memory_chat.py  memory_demo.py  pipeline.py  project_index.py  rag_agent.py  rag_demo.py  relevance.py
src/main/kotlin/: Main.kt
tests/: test_config_memory.py  test_database_logger.py  test_error_classifier.py  test_lsp_client.py  test_workspace_tools.py
